// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CatalogItemAuthor Coorp 1`] = `
<Text
  style={
    Array [
      Object {},
      Array [
        Object {
          "color": "#FFFFFF",
          "textAlign": "center",
          "textShadowColor": "rgba(0, 0, 0, 1)",
          "textShadowRadius": 2,
        },
        Object {
          "letterSpacing": 1.875,
        },
        Object {
          "fontSize": 10,
        },
      ],
    ]
  }
  testID="author-catalog-author"
>
  COORP 
  <Text
    style={
      Array [
        Object {},
        Object {
          "fontWeight": "900",
        },
      ]
    }
  >
    ORIGINAL
  </Text>
</Text>
`;

exports[`Storyshots CatalogItemAuthor Cover size 1`] = `
<Text
  style={
    Array [
      Object {},
      Array [
        Object {
          "color": "#FFFFFF",
          "textAlign": "center",
          "textShadowColor": "rgba(0, 0, 0, 1)",
          "textShadowRadius": 2,
        },
        Object {
          "letterSpacing": 2.25,
        },
        Object {
          "fontSize": 12,
        },
      ],
    ]
  }
  testID="author-catalog-author-custom-font-size"
>
  COORP 
  <Text
    style={
      Array [
        Object {},
        Object {
          "fontWeight": "900",
        },
      ]
    }
  >
    ORIGINAL
  </Text>
</Text>
`;

exports[`Storyshots CatalogItemAuthor Custom 1`] = `
<Text
  style={
    Array [
      Object {},
      Array [
        Object {
          "color": "#FFFFFF",
          "textAlign": "center",
          "textShadowColor": "rgba(0, 0, 0, 1)",
          "textShadowRadius": 2,
        },
        false,
        Object {
          "fontSize": 10,
        },
      ],
    ]
  }
  testID="author-catalog-author-custom"
>
  CUSTOM AUTHOR
   CREATION
</Text>
`;

exports[`Storyshots CatalogItemAuthor Hero size 1`] = `
<Text
  style={
    Array [
      Object {},
      Array [
        Object {
          "color": "#FFFFFF",
          "textAlign": "center",
          "textShadowColor": "rgba(0, 0, 0, 1)",
          "textShadowRadius": 2,
        },
        Object {
          "letterSpacing": 2.4375,
        },
        Object {
          "fontSize": 13,
        },
      ],
    ]
  }
  testID="author-catalog-author-custom-font-size"
>
  COORP 
  <Text
    style={
      Array [
        Object {},
        Object {
          "fontWeight": "900",
        },
      ]
    }
  >
    ORIGINAL
  </Text>
</Text>
`;

exports[`Storyshots CatalogItemAuthor Marketplace 1`] = `
<Text
  style={
    Array [
      Object {},
      Array [
        Object {
          "color": "#FFFFFF",
          "textAlign": "center",
          "textShadowColor": "rgba(0, 0, 0, 1)",
          "textShadowRadius": 2,
        },
        false,
        Object {
          "fontSize": 10,
        },
      ],
    ]
  }
  testID="author-catalog-author-marketplace"
>
  MARKETPLACE
</Text>
`;
